2008-09-02  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/comm.c (extract_extensions): Removed superfluous else that
	broke compilation.

2008-09-05  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Making protocol extension "timestamps" standard.

	* openvasd/ntp_11.c (__ntp_1x_timestamp_scan,
	__ntp_1x_timestamp_scan_host): Removed conditional
	for timestamps.

	* openvasd/comm.c (extract_extensions): Removed conditional
	for "timestamps", it is standard now.

	* doc/otp_specification_10.txt: Updated to described
	that protocol extension "timestamps" has been made standard.

2008-09-02  Michael Wiegand <michael.wiegand@intevation.de>

	* openvas-services: Fixed changes from rev 83 that caused the server to
	not report the appropriate port for the service when an open port 1241
	was detected.

2008-09-01  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Making protocol extension "plugins_version", "plugins_cve_id",
	"plugins_bugtraq_id" and "plugins_xrefs" standard.

	* openvasd/comm.c (extract_extensions): Removed handling
	of "plugins_version" "plugins_cve_id", "plugins_bugtraq_id"
	and "plugins_xrefs" extension.
	(send_plug_info): Always send NVT version, CVE ID, Bugtraq ID
	and cross references.

	* doc/otp_specification_10.txt: Updated to described
	that protocol extension "plugins_version", "plugins_cve_id",
	plugins_bugtraq_id" and "plugins_xrefs" have been made standard.

2008-09-01  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Making protocol extension "dependencies" standard.

	* openvasd/comm.c (extract_extensions): Removed handling
	of "dependencies" extension.

	* openvasd/openvasd.c (server_thread): Always send dependencies.

	* doc/otp_specification_10.txt: Updated to described
	that protocol extension dependencies has been made standard.

2008-08-31  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Remove NEW_ATTACK command.

	* openvasd/ntp_11.c (ntp_11_new_attack): Removed.
